# HelloOpenCV

./: CMakeLists.txt  README.md  main.cpp  person.cpp  red.cpp
