CMAKE_MINIMUM_REQUIRED(VERSION 2.6.2)
 
PROJECT("HelloOpenCV")

SET( PROJECT_VERSION_MINOR "0" )
SET( PROJECT_VERSION_MAJOR "0" )
SET( PROJECT_VERSION_PATCH "0" )
SET( PROJECT_VERSION "${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}.${PROJECT_VERSION_PATCH}" )

MESSAGE( "CMAKE_SOURCE_DIR=${CMAKE_SOURCE_DIR}" )
MESSAGE( "CMAKE_ROOT=${CMAKE_ROOT}" )
MESSAGE( "CMAKE_SYSTEM=${CMAKE_SYSTEM}" )
 
FIND_PACKAGE( OpenCV REQUIRED ) 
 
SET( SRCS main.cpp )
SET( MAIN_EXECUTABLE hello )
 
ADD_EXECUTABLE("${MAIN_EXECUTABLE}" ${SRCS})
TARGET_LINK_LIBRARIES(${MAIN_EXECUTABLE} ${OpenCV_LIBS})
INSTALL(TARGETS ${MAIN_EXECUTABLE} DESTINATION bin)
